complete my personal portfolio wesite

--- a/index.html
+++ b/index.html
@@ -31,5 +31,38 @@
             <a class="link_button" href="https://www.linkedin.com/in/ariful7885/" target="_blank">Download CV</a>
         </div>
     </section>
+
+     <section class="latest-work">
+         <h2 class="work-heading">My Latest Work</h2>
+      <div class="work-box">
+<img src="images/latest-work/work-1.png" alt="">
+      </div>
+      <div class="work-box">
+        <img src="images/latest-work/work-2.jpg" alt="">
+
+      </div>
+      <div class="work-box">
+        <img src="images/latest-work/work-3.jpg" alt="">
+
+      </div>
+
+     </section>
+    <section class="client-testimonial">
+        <div class="client-descript">
+       <h2>What Client Are Say</h2>
+       <h4>Bruce Moccy</h4>
+       <span>Founder and Ceo Alles</span>
+       <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis officiis inventore labore?"</p>
+
+    </div>
+        <div class="message">
+            <p>Leave me a message in the<br>
+           <span>programming.hero1@gmail.com</span> </p>
+        </div>
+    </section>
+<footer>
+    <p>Developer bdaarif initiative © 2020 All rights reserved</p>
+</footer>
+
 </body>
 </html>
